# Pose2Animation

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup_environment.bat
configs/_base_/: default_runtime.py
configs/_base_/datasets/: 300w.py  aflw.py  aic.py  aic2coco.py  aic2goliath.py  aic2goliath3d.py  ak.py  animalpose.py  ap10k.py  atrw.py  campus.py  coco.py  coco_openpose.py  coco_wholebody.py  coco_wholebody2goliath.py  coco_wholebody2goliath3d.py  coco_wholebody_face.py  coco_wholebody_hand.py  coco_wholebody_openpose.py  cofw.py  crowdpose.py  crowdpose2coco.py  crowdpose2goliath.py  crowdpose2goliath3d.py  deepfashion2.py  deepfashion_full.py  deepfashion_lower.py  deepfashion_upper.py  fly.py  freihand2d.py  goliath.py  goliath3d.py  h36m.py  halpe.py  halpe26.py  horse10.py  humanart.py  humanart_aic.py  interhand2d.py  interhand3d.py  (+20 more)
configs/sapiens_pose/coco/: sapiens_0.3b-210e_coco-1024x768.py  sapiens_0.6b-210e_coco-1024x768.py  sapiens_1b-210e_coco-1024x768.py  sapiens_2b-210e_coco-1024x768.py
configs/sapiens_pose/coco_wholebody/: sapiens_0.3b-210e_coco_wholebody-1024x768.py  sapiens_0.6b-210e_coco_wholebody-1024x768.py  (+2 more)
resources/: .gitkeep
src/: classes_and_palettes.py  demo.py  inference_without_detection.py  label_creator.py  recognition.py  utils.py
src/export/: batcher.py  deploy.py  executor.py  exporter.py
src/model/: executor.py  interface.py  postprocess.py  preprocess.py
src/triangulation/: reconstruction.py  triangulations.py
src/visualization/: opengl_visualizer.py  visualization.py
weights/: .gitkeep
(+10 files in other folders)
